# parquet4seastar

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
benchmark/: benchmark_readers.sh  benchmark_writers.sh  setup.sh
benchmark/arrow-parquet-tools/: CMakeLists.txt
benchmark/seastar-parquet-tools/: CMakeLists.txt
cmake/: FindThrift.cmake  parquet4seastarConfig.cmake.in
include/parquet4seastar/: bytes.hh  column_chunk_reader.hh  column_chunk_writer.hh  encoding.hh  file_reader.hh  file_writer.hh  record_reader.hh  rle_encoding.hh  thrift_serdes.hh
src/: column_chunk_reader.cc  compression.cc  cql_reader.cc  encoding.cc  file_reader.cc  logical_type.cc  reader_schema.cc  record_reader.cc  thrift_serdes.cc  writer_schema.cc
tests/: CMakeLists.txt  byte_stream_split_test.cc  column_chunk_writer_test.cc  compression_test.cc  cql_reader_alltypes_test.cc  cql_reader_test.cc  delta_binary_packed_test.cc  delta_byte_array_test.cc  delta_length_byte_array_test.cc  dictionary_encoder_test.cc  file_writer_test.cc  rle_encoding_test.cc  thrift_serdes_test.cc
